--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy:open": "cypress open",
-    "cy:run_chrome": "cypress run --headless -b chrome",
+    "cy:run_chrome": "cypress run --headless -b chrome --env urlFromCli=$ENV_URL",
     "cy:run_chrome_headed": "cypress run --headed -b chrome --env urlFromCli=$ENV_URL"
   },
   "repository": {
