--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Densf2/homework#readme",
   "dependencies": {
+    "cypress-mongodb": "^6.2.0",
     "fs-extra": "^11.1.1"
   },
   "devDependencies": {
