--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "cypress": "^13.2.0",
+    "cypress-mochawesome-reporter": "^3.6.1",
     "esm": "^3.2.25",
     "log4js": "^6.9.1",
     "node-fetch": "^3.3.2"
