--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "devDependencies": {
     "cypress": "^13.2.0",
     "cypress-mochawesome-reporter": "^3.6.1",
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
     "esm": "^3.2.25",
     "log4js": "^6.9.1",
     "node-fetch": "^3.3.2"
