--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy:open": "cypress open",
-    "cy:run_chrome": "cypress run --headless -b chrome --env urlFromCli=$ENV_URL",
-    "cy:run_chrome_headed": "cypress run --headed -b chrome --env urlFromCli=$ENV_URL"
+    "cy:run_chrome_with_env": "cypress run --headless -b chrome --env urlFromCli=$ENV_URL",
+    "cy:run_chrome_headed_with_env": "cypress run --headed -b chrome --env urlFromCli=$ENV_URL",
+    "cy:run_chrome": "cypress run --headless -b chrome",
+    "cy:run_chrome_headed": "cypress run --headed -b chrome"
   },
   "repository": {
     "type": "git",
