--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,14 +18,14 @@ jobs:
         run: npm install --force
       - name: Run tests
         run: npm run cy:run_chrome
-      # - name: Save report
-      #   uses: actions/upload-artifact@v3
-      #   with: 
-      #     path: cypress/reports/html
-      #     name: Main report
-      #   if: failure() || success()
-      # - name: Get report
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: Main report
-      #   if: failure() || success()
+      - name: Save report
+        uses: actions/upload-artifact@v3
+        with: 
+          path: cypress/reports/html
+          name: Main report
+        if: failure() || success()
+      - name: Get report
+        uses: actions/download-artifact@v3
+        with:
+          name: Main report
+        if: failure() || success()
